@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -22,9 +20,28 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.internal.invoke;
 
-public interface VMStorageProxy {
-    int type();
-    int index();
+/*
+ * @test
+ * @bug 8286797
+ * @summary  Guards of constant value false are not permitted
+ * @compile/fail/ref=T8286797.out --enable-preview -source ${jdk.version} -XDrawDiagnostics -XDshould-stop.at=FLOW T8286797.java
+ */
+
+public class T8286797 {
+
+    public void testWithConstant(Object o) {
+        switch (o) {
+            case String s when false -> {}
+            default -> {}
+        }
+    }
+
+    public void testWithSimpleName(Object o) {
+        final int x = 0;
+        switch (o) {
+            case String s when x == 42 -> {}
+            default -> {}
+        }
+    }
 }
